--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+  "type" : "git",
+  "url" : "https://github.com/Ilankumaran-developer/stripe_node"
+}
   "author": "",
   "license": "ISC",
   "dependencies": {
